[Admin][Docente][Studente]
Sistemato get e post modificaPassword con i controlli (funzionante)

--- a/fullstack/src/main/resources/templates/modificaPassword.html
+++ b/fullstack/src/main/resources/templates/modificaPassword.html
@@ -48,7 +48,7 @@
 		
 		<div class="container">
 			<div align="center" class="title"> Reimposta Password </div>
-			<form action="/insegnante/Modifica" method="post">
+			<form th:action="@{/{role}/Modifica(role = ${ruolo.ruolo})}" method="post">
 				<div class="user-details">
 					<div class="input-box">
 					  	<span class="details"> Nuova Password: </span>
@@ -76,7 +76,7 @@
 				<!--  Error message -->
 				
 				<div class="error" th:if="${param.error}">
-					<div class="alert-error"> Utente già registrato! </div>
+					<div class="alert-error"> Conferma la password correttamente! </div>
               
 					<div class="alert-lista"><a href="/admin/listaUtenti">Vedere la lista utenti? </a></div>
 				</div>
