--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -154,7 +154,7 @@
 	    
 	    /* Codice per l'input modulo del docente */
 	    function yesnoCheck(that) {
-		    if (that.value == "Docente") {
+		    if (that.value == "insegnante") {
 		        document.getElementById("ifYes").style.display = "block";
 		    } else {
 		        document.getElementById("ifYes").style.display = "none";
