--- a/fullstack/src/main/resources/templates/login.html
+++ b/fullstack/src/main/resources/templates/login.html
@@ -51,6 +51,20 @@
           alert("grecaptcha is ready!");
         };
  
+        document.getElementById("login-form").addEventListener("submit",function(evt)
+                {
+                
+                var response = grecaptcha.getResponse();
+                if(response.length == 0)
+                {
+                  
+                  alert("Please verify you're human!");
+                  evt.preventDefault();
+                  return false;
+                }
+                
+                
+              });
 </script>
 </body>
 <style>
