--- a/fullstack/src/main/resources/templates/modificaPassword.html
+++ b/fullstack/src/main/resources/templates/modificaPassword.html
@@ -45,7 +45,11 @@
 	    </div>
 	<!-- Registration Form -->
 	<section class="home-section">
-		
+		<div class="title-container">
+      <div class="title">
+          <img src="../static/images/logo.png" th:src="@{/images/logo.png}"/>
+      </div>
+    </div>
 		<div class="container">
 			<div align="center" class="title"> Reimposta Password </div>
 			<form th:action="@{/{role}/Modifica(role = ${ruolo.ruolo})}" method="post">
@@ -71,7 +75,7 @@
 					<div class="alert-success"> Utente registrato con successo! </div>
               
 					<div class="alert-lgn"><a href="/">Tornare alla pagina login?</a></div>
-				</div>
+				</div> 
 				
 				<!--  Error message -->
 				
@@ -79,7 +83,7 @@
 					<div class="alert-error"> Conferma la password correttamente! </div>
               
 					<div class="alert-lista"><a href="/admin/listaUtenti">Vedere la lista utenti? </a></div>
-				</div>
+				</div> 
 								
 			</form>
 	      
@@ -116,7 +120,6 @@
 </body>
 <!-- CSS STYLE -->
 <style>
-/* Navbar Style */
 /* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -125,40 +128,30 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
-
-
-
 .sidebar{
   position: fixed;
   left: 0;
   top: 0;
   height: 100%;
   width: 78px;
-  background: #002F56;
+  background: #141029;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
 }
-
 .sidebar.open{
   width: 250px;
 }
-
-
 .sidebar .logo-details{
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-
-
 .sidebar .logo-details .icon{
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar .logo-details .logo_name{
   color: #fff;
   font-size: 20px;
@@ -166,14 +159,10 @@
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details .icon,
 .sidebar.open .logo-details .logo_name{
   opacity: 1;
 }
-
-
 .sidebar .logo-details #btn{
   position: absolute;
   top: 50%;
@@ -186,8 +175,6 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details #btn{
   text-align: right;
 }
@@ -245,29 +232,17 @@
   border: none;
   border-radius: 12px;
   transition: all 0.5s ease;
-  background: #1d1b31;
+  background: #183C5A;
 }
 .sidebar.open input{
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
 .sidebar.open .bx-search:hover{
-  background: #1d1b31;
+  background: #183C5A;
   color: #FFF;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -276,10 +251,8 @@
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #183C5A;
 }
-
-
 .sidebar li a:hover{
   background: #FFF;
 }
@@ -296,12 +269,10 @@
   opacity: 1;
   pointer-events: auto;
 }
-
-
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #183C5A;
 }
 .sidebar li i{
   height: 50px;
@@ -309,8 +280,6 @@
   font-size: 18px;
   border-radius: 12px;
 }
-
-
 .sidebar li.profile{
   position: fixed;
   height: 60px;
@@ -318,7 +287,7 @@
   left: 0;
   bottom: -8px;
   padding: 10px 14px;
-  background: #1d1b31;
+  background: #183C5A;
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -352,7 +321,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background: #1d1b31;
+  background: #183C5A;
   width: 100%;
   height: 60px;
   line-height: 60px;
@@ -372,7 +341,6 @@
   width: calc(100% - 78px);
   transition: all 0.5s ease;
   z-index: 2;
-  padding: 10px;
 }
 .sidebar.open ~ .home-section{
   left: 250px;
@@ -380,12 +348,27 @@
 }
 .home-section .text{
   display: inline-block;
-  color: #11101d;
+  color: #183C5A;
   font-size: 25px;
   font-weight: 500;
   margin: 18px
 }
+.title-container img {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+
+.title-container {
+    padding-top: 20px;
+    width: 40%;
+
+    margin: auto;
+    align-items: center;
+}
 /* Registration Form Style */ 
 
 
@@ -449,7 +432,11 @@ form .user-details .input-box {
 
 .button {
     height: 45px;
-    margin: 15px 0;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    
+    width: 58%;
 }
 
 .btn {
@@ -461,9 +448,12 @@ form .user-details .input-box {
     font-weight: 500;
     letter-spacing: 1;
     border-radius: 7px;
-    background-color: #1d1b31;
+    background-color: #3DD6A3;
     color: white;
     cursor: pointer;
+    justify-content: center;
+    
+ 
 }
 
 
