--- a/fullstack/src/main/resources/templates/listaUtenti.html
+++ b/fullstack/src/main/resources/templates/listaUtenti.html
@@ -12,40 +12,45 @@
 </head>
 <body>
  <!--  Navbar on the left -->
-    <div class="sidebar">
-        <div class="logo-details">
+ <div class="sidebar">
+    <div class="logo-details">
+    <i></i>
+        <div class="logo_name"></div>
+        <i class='bx bx-menu' id="btn" ></i>
+    </div>
+    
+    <ul class="nav-list">
+    
+     <li>
+        <a href="/admin/report"> 
+            <i class='bx bxs-report' ></i>
+        <span class="links_name">Report</span>
+        </a>
+        <span class="tooltip">Report</span>
+    </li>
 
-        <i></i>
-            <div class="logo_name"></div>
-            <i class='bx bx-menu' id="btn" ></i>
-        </div>
-        
-        <ul class="nav-list">
-        
-         <li>
-            <a href="/admin/reportAll"> 
-                <i class='bx bxs-report' ></i>
-            <span class="links_name">Report</span>
-            </a>
-            <span class="tooltip">Report</span>
-        </li>
-        
-        <li>
-            <a href="/admin/listaUtenti">
-            <i class='bx bxs-user-detail'></i>
-            <span class="links_name">Lista Utenti</span>
-            </a>
-            <span class="tooltip">Lista Utenti</span>
-        </li>
-
-
-        <li>
-            <a href="/admin/registrazione"> 
-                <i class='bx bxs-user-plus' ></i>
-            <span class="links_name">Registrazione</span>
-            </a>
-            <span class="tooltip">Registrazione</span>
-        </li>
+    <li>
+        <a href="/admin/reportAll"> 
+            <i class='bx bx-table'></i>
+        <span class="links_name">Report Dettagliato</span>
+        </a>
+        <span class="tooltip">Report Dettagliato</span>
+    </li>
+    
+    <li>
+        <a href="/admin/listaUtenti">
+        <i class='bx bxs-user-detail'></i>
+        <span class="links_name">Lista Utenti</span>
+        </a>
+        <span class="tooltip">Lista Utenti</span>
+    </li>
+    <li>
+        <a href="/admin/registrazione"> 
+            <i class='bx bxs-user-plus' ></i>
+        <span class="links_name">Registrazione</span>
+        </a>
+        <span class="tooltip">Registrazione</span>
+    </li>
         
 
 
@@ -67,10 +72,17 @@
 	  	
 	  <div class="title-container">
         <div class="title">
-            <p class="report-title"> Lista Utenti </p>
+            <img src="../static/images/logo.png" th:src="@{/images/logo.png}"/>
         </div>
       </div>	
-	  	
+	  	<div class="header">
+            <div class="docente"> 
+                <p class="text-doc"> LISTA UTENTI </p>
+            </div>
+           
+            
+        </div>
+        <hr class="hr">
         
      <div class="table-container" >
         <table>
@@ -81,8 +93,8 @@
             <th>Ruolo</th>
             <th>Password</th>
             <th>Stato</th>
-			<th></th>
-            <th></th>
+			<th>Modifica</th>
+            <th>Blocca</th>
             
           </tr>
           <tr th:each="utenti : ${utenti}">
@@ -96,8 +108,8 @@
 	            <span th:unless="${utenti.password == null}"><span class="dot2"></span></span>
 	         </td>  
 	           
-            <td><a th:href="@{'/admin/listaUtenti/modifica/' + ${utenti.getIdutente()}}"> Modifica </a></td>
-            <td><a onclick="blockAlert()" th:href="@{'/admin/listaUtenti/rimuovi/' + ${utenti.getIdutente()}}">Blocca</a></td>
+            <td><a th:href="@{'/admin/listaUtenti/modifica/' + ${utenti.getIdutente()}}"> <i class='bx bxs-edit-alt' ></i> </a></td>
+            <td><a onclick="blockAlert()" th:href="@{'/admin/listaUtenti/rimuovi/' + ${utenti.getIdutente()}}"><i class='bx bx-block' ></i></a></td>
         </tr>
         </table>
       </div>
@@ -107,7 +119,10 @@
     <script type="text/javascript">
    
     function blockAlert() {
-		alert("L'utente è stato bloccato");
+		var result = confirm("Sei sicuro di bloccarlo?");
+		if(result == false) {
+			event.preventDefault();
+		}
     }
     
     var onloadCallback = function() {
@@ -135,40 +150,30 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
-
-
-
 .sidebar{
   position: fixed;
   left: 0;
   top: 0;
   height: 100%;
   width: 78px;
-  background: #002F56;
+  background: #141029;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
 }
-
 .sidebar.open{
   width: 250px;
 }
-
-
 .sidebar .logo-details{
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-
-
 .sidebar .logo-details .icon{
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar .logo-details .logo_name{
   color: #fff;
   font-size: 20px;
@@ -176,14 +181,10 @@
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details .icon,
 .sidebar.open .logo-details .logo_name{
   opacity: 1;
 }
-
-
 .sidebar .logo-details #btn{
   position: absolute;
   top: 50%;
@@ -196,8 +197,6 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details #btn{
   text-align: right;
 }
@@ -255,29 +254,17 @@
   border: none;
   border-radius: 12px;
   transition: all 0.5s ease;
-  background: #1d1b31;
+  background: #183C5A;
 }
 .sidebar.open input{
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
 .sidebar.open .bx-search:hover{
-  background: #1d1b31;
+  background: #183C5A;
   color: #FFF;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -286,10 +273,8 @@
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #183C5A;
 }
-
-
 .sidebar li a:hover{
   background: #FFF;
 }
@@ -306,12 +291,10 @@
   opacity: 1;
   pointer-events: auto;
 }
-
-
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #183C5A;
 }
 .sidebar li i{
   height: 50px;
@@ -319,8 +302,6 @@
   font-size: 18px;
   border-radius: 12px;
 }
-
-
 .sidebar li.profile{
   position: fixed;
   height: 60px;
@@ -328,7 +309,7 @@
   left: 0;
   bottom: -8px;
   padding: 10px 14px;
-  background: #1d1b31;
+  background: #183C5A;
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -362,7 +343,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background: #1d1b31;
+  background: #183C5A;
   width: 100%;
   height: 60px;
   line-height: 60px;
@@ -389,10 +370,92 @@
 }
 .home-section .text{
   display: inline-block;
-  color: #11101d;
+  color: #183C5A;
   font-size: 25px;
   font-weight: 500;
   margin: 18px
+}
+
+
+.title-container img {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.header {
+    width: 80%;
+    align-items: center;
+    margin: auto;
+    display: flex;
+    padding-top: 20px;
+}
+ 
+
+.docente {
+    width: 40%;
+    text-align: left;
+  display: flex;
+}
+
+.modulo {
+    text-align: center;
+    width: 40%;
+    text-align: left;
+}
+.text-doc{
+	font-size: 20px;
+	color: #141029;
+	font-weight: 500;
+}
+
+.hr {
+    width: 80%;
+    margin: auto;
+}
+/* Lista utenti CSS */
+.title-container {
+    padding-top: 20px;
+    width: 40%;
+   
+    margin: auto;
+    align-items: center;
+}
+.title {
+    width: 100%;
+    margin: auto;
+    justify-content: center;
+    text-align: center;
+}
+.title p {
+    font-size: 30px;
+}
+.table-container {
+    overflow-x: auto;
+    width: 80%;
+    margin: auto;
+    padding-top: 40px;
+}
+.table-container table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    background-color: #eaeafd;
+}
+.table-container table th {
+    text-align: center;
+    padding: 8px;
+    background-color: #183C5A;
+    color: white;
+    border: 0.5px solid #ffffff;
+    border-bottom: none;
+}
+.table-container table td {
+    text-align: center;
+    padding: 8px;
+    border: 0.5px solid white;
 }
 
 
@@ -423,49 +486,21 @@
 
 
 .dot {
-  height: 25px;
-  width: 25px;
+  height: 18px;
+  width: 18px;
   background-color: red;
   border-radius: 50%;
   display: inline-block;
 }
 
 .dot2 {
-  height: 25px;
-  width: 25px;
+  height: 18px;
+  width: 18px;
   background-color: green;
   border-radius: 50%;
   display: inline-block;
 }
 
-.table-container {
-    overflow-x: auto;
-    width: 80%;
-    margin: auto;
-    padding-top: 40px;
-}
-
-.table-container table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    border: 0.5px solid #002F56;
-}
-
-.table-container table th {
-    text-align: center;
-    padding: 8px;
-    background-color: #002F56;
-    color: white;
-    border: 0.5px solid #ffffff;
-    border-bottom: none;
-}
-
-.table-container table td {
-    text-align: center;
-    padding: 8px;
-    border: 0.5px solid #002F56;
-}
 
 </style>
 </html>
