--- a/fullstack/src/main/resources/templates/menuFeedback.html
+++ b/fullstack/src/main/resources/templates/menuFeedback.html
@@ -24,6 +24,14 @@
 
 
         <li>
+            <a href="/studente/menuFeedback"> 
+                <i class='bx bx-align-middle'></i>
+            <span class="links_name">Menu</span>
+            </a>
+            <span class="tooltip">Menu </span>
+        </li>
+
+        <li>
             <a href="/studente/profilo"> 
                 <i class='bx bxs-user' ></i>
             <span class="links_name">Profilo</span>
@@ -31,6 +39,7 @@
             <span class="tooltip">Profilo</span>
         </li>
             
+
       
 
         <li class="profile">
@@ -48,19 +57,32 @@
 
     <!-- Qua va messo tutto il contenuto ovvero il report --> 
     <section class="home-section">
-        <div class="title-container">
-            <p class="report-title"> MENU FEEDBACK  </p>
-            <p> Scegli il modulo a cui vuoi fare il sondaggio: </p>
+      <div class="title-container">
+        <img src="../static/images/logo.png" th:src="@{/images/logo.png}"/>
+        
+    </div>
+    <div class="header">
+      <div class="studente"> 
+          <p class="text-doc"><b>STUDENTE: </b><p>&nbsp;</p></p><p class="text-doc" th:text= "${utente.nome}"></p><p>&nbsp;</p><p class="text-doc" th:text= "${utente.cognome}">
+      </div>
+    </div>
+  <hr class="hr">
+  <div class="container-choose">
+      <p class="container-text"> Scegli il modulo a cui vuoi fare il sondaggio </p>
+  </div>
+    <div class="container-report">
+        <div id="box-modulo" class="box-modulo" th:each="m : ${modulo}">
+            <div class="title-modulo">
+                <p onclick="loadDoc(this.id); closeDoc();" th:id="${m.idmodulo}" class="modulo-text" th:text="${m.modulo}"></p>
+  
+            </div>	
+        
+            <div class="details" th:id="details + ${m.idmodulo}">      
         </div>
-        <div class="container-report">
-            <div class="box-modulo" th:each="m : ${modulo}">
-                <div class="title-modulo" onclick="getId(this.id)" th:id="${m.idmodulo}" >
-                    <a class="modulo-text" th:text="${m.modulo}"></a>
-             		
-      			
-            	</div>
-    		</div>
+        
+          </div>
         </div>
+     
 	</section>
     
 <!-- JavaScript -->
@@ -114,7 +136,6 @@
 <!-- CSS STYLE -->
 <style>
 
-/* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
@@ -122,40 +143,30 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
-
-
-
 .sidebar{
   position: fixed;
   left: 0;
   top: 0;
   height: 100%;
   width: 78px;
-  background: #002F56;
+  background: #141029;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
 }
-
 .sidebar.open{
   width: 250px;
 }
-
-
 .sidebar .logo-details{
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-
-
 .sidebar .logo-details .icon{
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar .logo-details .logo_name{
   color: #fff;
   font-size: 20px;
@@ -163,14 +174,10 @@
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details .icon,
 .sidebar.open .logo-details .logo_name{
   opacity: 1;
 }
-
-
 .sidebar .logo-details #btn{
   position: absolute;
   top: 50%;
@@ -183,8 +190,6 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details #btn{
   text-align: right;
 }
@@ -242,29 +247,17 @@
   border: none;
   border-radius: 12px;
   transition: all 0.5s ease;
-  background: #1d1b31;
+  background: #183C5A;
 }
 .sidebar.open input{
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
 .sidebar.open .bx-search:hover{
-  background: #1d1b31;
+  background: #183C5A;
   color: #FFF;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -273,10 +266,8 @@
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #183C5A;
 }
-
-
 .sidebar li a:hover{
   background: #FFF;
 }
@@ -293,12 +284,10 @@
   opacity: 1;
   pointer-events: auto;
 }
-
-
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #183C5A;
 }
 .sidebar li i{
   height: 50px;
@@ -306,8 +295,6 @@
   font-size: 18px;
   border-radius: 12px;
 }
-
-
 .sidebar li.profile{
   position: fixed;
   height: 60px;
@@ -315,7 +302,7 @@
   left: 0;
   bottom: -8px;
   padding: 10px 14px;
-  background: #1d1b31;
+  background: #183C5A;
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -349,7 +336,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background: #1d1b31;
+  background: #183C5A;
   width: 100%;
   height: 60px;
   line-height: 60px;
@@ -376,49 +363,65 @@
 }
 .home-section .text{
   display: inline-block;
-  color: #11101d;
+  color: #183C5A;
   font-size: 25px;
   font-weight: 500;
   margin: 18px
 }
 
-.title-container {
-    justify-content: center;
-    width: 70%;
-    text-align: center;
-    position: relative;
-    height: 100%;
-    display: flex;
-    margin: auto;
-    top: 20px;
-    font-size:55px;
-    
+
+.title-container img {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+
+.title-container {
+    padding-top: 20px;
+    width: 40%;
+
+    margin: auto;
+    align-items: center;
+}
+
 
 
 .container-report {
     justify-content: center;
-    width: 80%;
+    width: 60%;
     text-align: center;
     position: relative;
     height: 100%;
     margin: 20px auto;
-    top: 20px;
    
 }
 
 .box-modulo {
-  font-size: 25px;
+  font-size: 20px;
   margin-top: 25px;
-  cursor: pointer;
+  
+  
 }
 
 .title-modulo {
   border-radius: 12px;
-  background-color: #002F56;
-  width: 100%;
-  border: 2px solid blackm
+  background: #002f56;
+  
+  height: 60px;
+  
+}
 
+.modulo-text {
+  color: white;
+  text-decoration: underline;
+  padding-top: 18px;
+}
+
+.title-modulo p {
+	cursor: pointer;
 }
 
 .modulo-text {
@@ -427,6 +430,40 @@
   
 }
 
+.header {
+    width: 60%;
+    align-items: center;
+    margin: auto;
+    display: flex;
+    padding-top: 20px;
+}
+ 
+.studente {
+    width: 20%;
+    text-align: left;
+	display: flex;
+	color:#183C5A;
+}
+
+
+.hr {
+    width: 60%;
+    margin: auto;
+}
+
+.container-choose {
+  width: 100%;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.container-text {
+  color:#002f56;
+  font-weight: 700;
+  width: 60%;
+  margin: auto;
+  font-size: 18px;
+}
 
 
 @media (max-width: 420px) {
