--- a/fullstack/src/main/resources/templates/modificaUtente.html
+++ b/fullstack/src/main/resources/templates/modificaUtente.html
@@ -11,10 +11,9 @@
     <title>Registrazione</title>
 </head>
 <body>
-	 <!--  Navbar on the left -->
+	<!--  Navbar on the left -->
     <div class="sidebar">
         <div class="logo-details">
-
         <i></i>
             <div class="logo_name"></div>
             <i class='bx bx-menu' id="btn" ></i>
@@ -29,6 +28,14 @@
             </a>
             <span class="tooltip">Report</span>
         </li>
+
+        <li>
+            <a href="/admin/reportAll"> 
+                <i class='bx bx-table'></i>
+            <span class="links_name">Report Dettagliato</span>
+            </a>
+            <span class="tooltip">Report Dettagliato</span>
+        </li>
         
         <li>
             <a href="/admin/listaUtenti">
@@ -37,8 +44,6 @@
             </a>
             <span class="tooltip">Lista Utenti</span>
         </li>
-
-
         <li>
             <a href="/admin/registrazione"> 
                 <i class='bx bxs-user-plus' ></i>
@@ -63,9 +68,14 @@
     </div>
 	<!-- Registration Form -->
 	<section class="home-section">
-		
+        <div class="title-container">
+            <div class="title">
+               <img src="../static/images/logo.png" th:src="@{/images/logo.png}"/>
+            </div>
+      </div>
 		<div class="container">
 			<div align="center" class="title"> Modifica Utente </div>
+            <hr class="hr">
 			<form action="/admin/edit" method="post" th:object="${utenteMod}">
 				<div class="user-details">
 					<input type="hidden" name="id" th:value="${utenteMod.idutente}">
@@ -90,16 +100,10 @@
 	                    </select>
 		            </div> 
 		   
-					
-		                    <!-- Ho tolto il tag form, ma non so se c'è bisogno per il captcha -->
-		            <div class="input-box">        
-	                    <div class="form-group row">
-	                      	<div class="g-recaptcha" data-sitekey="6LfOIysjAAAAAEoBl8tDQvc_7qtOb-2z3cm1sX-p"></div>
-	                    </div>
-		            </div>  
+			
 		        </div>        
 				  		<div class="button">
-		                   <button class="btn" type="submit" value="Registrati"> Registrati </button>
+		                   <button class="btn" type="submit" value="Registrati"> Modifica </button>
 		    			</div>
 				
 			  	<!--  Success message -->
@@ -108,7 +112,7 @@
 					<div class="alert-success"> Utente registrato con successo! </div>
               
 					<div class="alert-lgn"><a href="/">Tornare alla pagina login?</a></div>
-				</div>
+				</div> 
 				
 				<!--  Error message -->
 				
@@ -160,7 +164,6 @@
 </body>
 <!-- CSS STYLE -->
 <style>
-/* Navbar Style */
 /* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -169,40 +172,30 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
-
-
-
 .sidebar{
   position: fixed;
   left: 0;
   top: 0;
   height: 100%;
   width: 78px;
-  background: #002F56;
+  background: #141029;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
 }
-
 .sidebar.open{
   width: 250px;
 }
-
-
 .sidebar .logo-details{
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-
-
 .sidebar .logo-details .icon{
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar .logo-details .logo_name{
   color: #fff;
   font-size: 20px;
@@ -210,14 +203,10 @@
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details .icon,
 .sidebar.open .logo-details .logo_name{
   opacity: 1;
 }
-
-
 .sidebar .logo-details #btn{
   position: absolute;
   top: 50%;
@@ -230,8 +219,6 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details #btn{
   text-align: right;
 }
@@ -289,29 +276,17 @@
   border: none;
   border-radius: 12px;
   transition: all 0.5s ease;
-  background: #1d1b31;
+  background: #183C5A;
 }
 .sidebar.open input{
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
 .sidebar.open .bx-search:hover{
-  background: #1d1b31;
+  background: #183C5A;
   color: #FFF;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -320,10 +295,8 @@
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #183C5A;
 }
-
-
 .sidebar li a:hover{
   background: #FFF;
 }
@@ -340,12 +313,10 @@
   opacity: 1;
   pointer-events: auto;
 }
-
-
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #183C5A;
 }
 .sidebar li i{
   height: 50px;
@@ -353,8 +324,6 @@
   font-size: 18px;
   border-radius: 12px;
 }
-
-
 .sidebar li.profile{
   position: fixed;
   height: 60px;
@@ -362,7 +331,7 @@
   left: 0;
   bottom: -8px;
   padding: 10px 14px;
-  background: #1d1b31;
+  background: #183C5A;
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -396,7 +365,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background: #1d1b31;
+  background: #183C5A;
   width: 100%;
   height: 60px;
   line-height: 60px;
@@ -416,7 +385,6 @@
   width: calc(100% - 78px);
   transition: all 0.5s ease;
   z-index: 2;
-  padding: 10px;
 }
 .sidebar.open ~ .home-section{
   left: 250px;
@@ -424,21 +392,45 @@
 }
 .home-section .text{
   display: inline-block;
-  color: #11101d;
+  color: #183C5A;
   font-size: 25px;
   font-weight: 500;
   margin: 18px
 }
 
-/* Registration Form Style */ 
 
+/* Registration Form Style */ 
+.title-container img {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* Lista utenti CSS */
+.title-container {
+    padding-top: 20px;
+    width: 40%;
+   
+    margin: auto;
+    align-items: center;
+}
+.title {
+    width: 100%;
+    margin: auto;
+    justify-content: center;
+    text-align: center;
+}
+.title p {
+    font-size: 30px;
+}
 
 .container {
 	width: 100%;
 	max-width: 700px;
 	padding: 25px 30px;
 	border-radius: 5px;
-    margin: 7% auto;
+    margin: 2% auto;
     background: #002F56;
     color: white;
     
@@ -451,6 +443,10 @@
 	justify-content: center;
 }
 
+.hr {
+    margin-top: 20px;
+    
+}
 
 .container form .user-details {
 	display: flex;
@@ -468,7 +464,7 @@ form .user-details .input-box {
 .user-details .input-box .details {
 	display: block;
 	font-weight: 500;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 
 }
 .user-details .input-box input{
@@ -479,6 +475,7 @@ form .user-details .input-box {
 	font-size: 14px;	
 	padding-left: 15px;
 	border: 1px solid black;
+    margin-bottom: 10px;
 }
 
 .user-details .input-box select{
@@ -489,11 +486,16 @@ form .user-details .input-box {
 	font-size: 14px;	
 	padding-left: 15px;
 	border: 1px solid black;
+    
 }
 
 .button {
     height: 45px;
-    margin: 15px 0;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    
+    width: 58%;
 }
 
 .btn {
@@ -505,16 +507,12 @@ form .user-details .input-box {
     font-weight: 500;
     letter-spacing: 1;
     border-radius: 7px;
-    background-color: #1d1b31;
+    background-color: #3DD6A3;
     color: white;
     cursor: pointer;
-}
-
-
-.success {
-	width: 100%;
     justify-content: center;
-    align-items: center;
+    
+ 
 }
 
 .alert-success {
