--- a/fullstack/src/main/resources/templates/profilo.html
+++ b/fullstack/src/main/resources/templates/profilo.html
@@ -10,30 +10,31 @@
 </head>
 <body>
 	<!--  Navbar on the left -->
-	    <div class="sidebar">
-	        <div class="logo-details">
-	
-	        <i></i>
-	            <div class="logo_name"></div>
-	            <i class='bx bx-menu' id="btn" ></i>
-	        </div>
-	
-	        
-	        <ul class="nav-list">
-	        <li>
-	            <a href="/insegnante/profilo">
-	            <i class='bx bxs-user-detail'></i>
-	            <span class="links_name">Profilo</span>
-	            </a>
-	            <span class="tooltip">Profilo</span>
-	        </li> 
-	        <li>
-	            <a href="/insegnante/modificaPassword">
-	            <i class='bx bxs-user-detail'></i>
-	            <span class="links_name">Modifica Password</span>
-	            </a>
-	            <span class="tooltip">Modifica Password</span>
-	        </li> 
+	<div class="sidebar">
+        <div class="logo-details">
+        
+        <i></i>
+        <div class="logo_name"></div>
+        <i class='bx bx-menu' id="btn" ></i>
+        </div>
+        
+        
+        <ul class="nav-list">
+            <li>
+                <a th:href="@{/{role}/profilo(role = ${ruolo.ruolo})}">
+                <i class='bx bxs-user-detail'></i>
+                <span class="links_name">Profilo</span>
+                </a>
+                <span class="tooltip">Profilo</span>
+            </li> 
+    
+            <li>
+                <a href="/insegnante/risultati">
+                <i class='bx bxs-report' ></i>
+                <span class="links_name">Reportistica</span>
+                </a>
+                <span class="tooltip">Reportistica</span>
+            </li> 
 
 
 
@@ -53,34 +54,86 @@
     <!-- Profilo Dati -->
     <section class="home-section">
 	  	
-	  <div class="title-container">
-        <div class="title">
-            <p> Profilo </p>
-        </div>
-      </div>	
+        <div class="title-container">
+            <div class="title">
+                <img src="../static/images/logo.png" th:src="@{/images/logo.png}"/>
+            </div>
+          </div>
 	  	
         
-     <div class="table-container" >
-        <table>
-          <tr>
-            <th>Nome</th>
-            <th>Cognome</th>
-            <th>Email</th>
-            <th>Ruolo</th>
-            <th>Password</th>
-           
-          </tr>
-          <tr>
-            <td th:text="${utente.nome}"></td>
-            <td th:text="${utente.cognome}"></td>
-            <td th:text="${utente.email}"></td>
-           	<td th:text="${ruolo.ruolo}"></td>
-            <td th:text="${utente.password}"></td>
-        </tr>
-        </table>
-      </div>
+     <div class="container" >
+        <div align="left" class="title"> Il mio profilo </div>
+            <hr class="hr">
+            <div class="box-info">
 
-      <a th:href="@{/{role}/modificaPassword(role = ${ruolo.ruolo})}">Modifica Password</a>
+                <div class="main-info">
+                    <p>Nome:</p>
+                </div>
+
+                <div class="info">
+                    <p th:text="${utente.nome}"></p>
+                </div>
+
+            </div>
+
+            <div class="box-info">
+    
+                <div class="main-info">
+                    <p>Cognome:</p>
+                </div>
+
+                <div class="info">
+                    <p th:text="${utente.cognome}"></p>
+                </div>
+
+            </div>
+
+
+          <div class="box-info">
+    
+                <div class="main-info">
+                    <p>Email</p>
+                </div>
+
+                <div class="info">
+                    <p th:text="${utente.email}"></p>
+                </div>
+
+            </div>
+
+
+          
+            <!--  <div class="box-info">
+    
+                <div class="main-info">
+                    <p>Ruolo</p>
+                </div>
+
+                <div class="info">
+                    <p th:text="${utente.ruolo}"></p>
+                </div>
+
+            </div>-->
+
+
+
+            <div class="box-info">
+    
+                <div class="main-info">
+                    <p>Password</p>
+                </div>
+
+                <div class="info">
+                    <p th:text="${utente.password}"></p>
+                </div>
+
+            </div>        
+ 
+                        
+                  
+
+                <a th:href="@{/{role}/modificaPassword(role = ${ruolo.ruolo})}">Modifica Password</a>
+        </div>
     </section>  
 
 
@@ -102,7 +155,6 @@
 </body>
 <!-- CSS STYLE -->
 <style>
-/* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
@@ -116,7 +168,7 @@
   top: 0;
   height: 100%;
   width: 78px;
-  background: #002F56;
+  background: #141029;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
@@ -214,29 +266,17 @@
   border: none;
   border-radius: 12px;
   transition: all 0.5s ease;
-  background: #1d1b31;
+  background: #183C5A;
 }
 .sidebar.open input{
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
 .sidebar.open .bx-search:hover{
-  background: #1d1b31;
+  background: #183C5A;
   color: #FFF;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -245,7 +285,7 @@
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #183C5A;
 }
 .sidebar li a:hover{
   background: #FFF;
@@ -266,7 +306,7 @@
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #183C5A;
 }
 .sidebar li i{
   height: 50px;
@@ -281,7 +321,7 @@
   left: 0;
   bottom: -8px;
   padding: 10px 14px;
-  background: #1d1b31;
+  background: #183C5A;
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -315,7 +355,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background: #1d1b31;
+  background: #183C5A;
   width: 100%;
   height: 60px;
   line-height: 60px;
@@ -342,52 +382,74 @@
 }
 .home-section .text{
   display: inline-block;
-  color: #11101d;
+  color: #183C5A;
   font-size: 25px;
   font-weight: 500;
   margin: 18px
 }
-/* Lista utenti CSS */
+
+
+.title-container img {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
 .title-container {
     padding-top: 20px;
     width: 40%;
-   
+
     margin: auto;
     align-items: center;
 }
-.title {
-    width: 100%;
-    margin: auto;
-    justify-content: center;
-    text-align: center;
-}
-.title p {
-    font-size: 30px;
-}
-.table-container {
-    overflow-x: auto;
-    width: 80%;
-    margin: auto;
-    padding-top: 40px;
-}
-.table-container table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    border: 0.5px solid #002F56;
-}
-.table-container table th {
-    text-align: center;
-    padding: 8px;
-    background-color: #002F56;
+
+.container {
+	width: 100%;
+	max-width: 700px;
+	padding: 25px 70px;
+	border-radius: 5px;
+    margin: 2% auto;
+    background: #002F56;
     color: white;
-    border: 0.5px solid #ffffff;
-    border-bottom: none;
+    
 }
-.table-container table td {
-    text-align: center;
-    padding: 8px;
-    border: 0.5px solid #002F56;
+
+.container .title {
+	font-size: 30px;
+	font-weight: 500;
+	position: relative;
+	justify-content: center;
+}
+
+.hr {
+    margin-top: 20px;
+    color: white;
+}
+
+.box-info {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    column-gap: 120px;
+    
+}
+
+.main-info {
+    width: 50%;
+    
+}
+
+a {
+	color: white;
+}
+
+.info {
+    width: 90%;
+    border-bottom: 2px solid white;
 }
 </style>
 </html>
