--- a/fullstack/src/main/resources/templates/report.html
+++ b/fullstack/src/main/resources/templates/report.html
@@ -9,10 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
     <body>
-    <!--  Navbar on the left -->
+   <!--  Navbar on the left -->
     <div class="sidebar">
         <div class="logo-details">
-
         <i></i>
             <div class="logo_name"></div>
             <i class='bx bx-menu' id="btn" ></i>
@@ -21,11 +20,19 @@
         <ul class="nav-list">
         
          <li>
-            <a href="/admin/reportAll"> 
+            <a href="/admin/report"> 
                 <i class='bx bxs-report' ></i>
             <span class="links_name">Report</span>
             </a>
             <span class="tooltip">Report</span>
+        </li>
+
+        <li>
+            <a href="/admin/reportAll"> 
+                <i class='bx bx-table'></i>
+            <span class="links_name">Report Dettagliato</span>
+            </a>
+            <span class="tooltip">Report Dettagliato</span>
         </li>
         
         <li>
@@ -35,8 +42,6 @@
             </a>
             <span class="tooltip">Lista Utenti</span>
         </li>
-
-
         <li>
             <a href="/admin/registrazione"> 
                 <i class='bx bxs-user-plus' ></i>
@@ -63,9 +68,17 @@
     <!-- Qua va messo tutto il contenuto ovvero il report --> 
     <section class="home-section">
         <div class="title-container">
-            <p class="report-title"> Report per Modulo </p>
+            <img src="../static/images/logo.png" th:src="@{/images/logo.png}"/>
             
         </div>
+        <div class="header">
+            <div class="docente"> 
+                <p class="text-doc"> REPORTISTICA </p>
+            </div>
+           
+            
+        </div>
+        <hr class="hr">
         <div class="container-report">
             <div id="box-modulo" class="box-modulo" th:each="m : ${modulo}">
                 <div class="title-modulo">
@@ -78,7 +91,9 @@
       			
             	</div>
     		</div>
-     
+			<div class="button">
+				<button class="btn" value="Login"> <a id="text-a" href="/admin/reportAll">Visualizza il report completo</a></button>
+			</div>
 	</section>
     
 <!-- JavaScript -->
@@ -142,40 +157,30 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
-
-
-
 .sidebar{
   position: fixed;
   left: 0;
   top: 0;
   height: 100%;
   width: 78px;
-  background: #002F56;
+  background: #141029;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
 }
-
 .sidebar.open{
   width: 250px;
 }
-
-
 .sidebar .logo-details{
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-
-
 .sidebar .logo-details .icon{
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar .logo-details .logo_name{
   color: #fff;
   font-size: 20px;
@@ -183,14 +188,10 @@
   opacity: 0;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details .icon,
 .sidebar.open .logo-details .logo_name{
   opacity: 1;
 }
-
-
 .sidebar .logo-details #btn{
   position: absolute;
   top: 50%;
@@ -203,8 +204,6 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
-
-
 .sidebar.open .logo-details #btn{
   text-align: right;
 }
@@ -262,29 +261,17 @@
   border: none;
   border-radius: 12px;
   transition: all 0.5s ease;
-  background: #1d1b31;
+  background: #183C5A;
 }
 .sidebar.open input{
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
 .sidebar.open .bx-search:hover{
-  background: #1d1b31;
+  background: #183C5A;
   color: #FFF;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -293,10 +280,8 @@
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #183C5A;
 }
-
-
 .sidebar li a:hover{
   background: #FFF;
 }
@@ -313,12 +298,10 @@
   opacity: 1;
   pointer-events: auto;
 }
-
-
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #183C5A;
 }
 .sidebar li i{
   height: 50px;
@@ -326,8 +309,6 @@
   font-size: 18px;
   border-radius: 12px;
 }
-
-
 .sidebar li.profile{
   position: fixed;
   height: 60px;
@@ -335,7 +316,7 @@
   left: 0;
   bottom: -8px;
   padding: 10px 14px;
-  background: #1d1b31;
+  background: #183C5A;
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -369,7 +350,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background: #1d1b31;
+  background: #183C5A;
   width: 100%;
   height: 60px;
   line-height: 60px;
@@ -396,10 +377,19 @@
 }
 .home-section .text{
   display: inline-block;
-  color: #11101d;
+  color: #183C5A;
   font-size: 25px;
   font-weight: 500;
   margin: 18px
+}
+
+
+.title-container img {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .title-container {
@@ -411,14 +401,45 @@
     display: flex;
     margin: auto;
     top: 20px;
-    font-size:30px;
+    font-size:25px;
     
+}
+.header {
+    width: 60%;
+    align-items: center;
+    margin: auto;
+    display: flex;
+    padding-top: 20px;
+}
+ 
+
+.docente {
+    width: 20%;
+    text-align: left;
+  display: flex;
+}
+
+.modulo {
+    text-align: center;
+    width: 20%;
+    text-align: left;
 }
 
 
+.text-doc{
+	font-size: 20px;
+	color: #141029;
+	font-weight: 500;
+}
+
+.hr {
+    width: 60%;
+    margin: auto;
+}
+
 .container-report {
     justify-content: center;
-    width: 70%;
+    width: 60%;
     text-align: center;
     position: relative;
     height: 100%;
@@ -428,7 +449,7 @@
 }
 
 .box-modulo {
-  font-size: 25px;
+  font-size: 18px;
   margin-top: 25px;
   
   
@@ -438,7 +459,7 @@
   border-radius: 12px;
   background: #002f56;
   
-  height: 70px;
+  height: 60px;
   
 }
 
@@ -452,28 +473,57 @@
 	cursor: pointer;
 }
 
+.button {
+    height: 45px;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 70px;
+    width: 15%;
+    
+	
+}
 
+.btn {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1;
+    border-radius: 7px;
+    background-color: #3DD6A3;
+    color: white;
+    cursor: pointer;
+    justify-content: center;
+	
+}
+
+#text-a  {
+	color: white;
+	text-decoration: none;
+	font-size: 13px;
+}
 
 /* CSS reportDetails */
-.btn-dettagli {
-  width: 40px;
-  height: 40px;
-  background-color: #002F56;
-  border-radius: 12px;
-}
 
-.btn-dettagli i{
-  color: white;
+.details-table th {
+	font-size: 18px;
+	background-color: #A7A7FC;
+	border: 0.5px solid rgb(238, 238, 255);
+	color: white;
+	height: 30px;
+	
 }
-
 
 .details-table td {
-  border: 3px solid rgb(238, 238, 255);
+  border: 0.5px solid rgb(238, 238, 255);
   background-color: #f2f9ff;
   border-top: none;
   padding: 10px 20px;
   text-align: center;
-  font-size: 17px;
+  font-size: 15px;
   
 
 }
