--- a/fullstack/src/main/resources/templates/reportAll.html
+++ b/fullstack/src/main/resources/templates/reportAll.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <!-- Font Awesome Icon Library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,11 +23,19 @@
         <ul class="nav-list">
         
          <li>
-            <a href="/admin/reportAll"> 
+            <a href="/admin/report"> 
                 <i class='bx bxs-report' ></i>
             <span class="links_name">Report</span>
             </a>
             <span class="tooltip">Report</span>
+        </li>
+
+        <li>
+            <a href="/admin/reportAll"> 
+                <i class='bx bx-table'></i>
+            <span class="links_name">Report Dettagliato</span>
+            </a>
+            <span class="tooltip">Report Dettagliato</span>
         </li>
         
         <li>
@@ -61,15 +71,19 @@
 	  	
 	  <div class="title-container">
         <div class="title">
-            <p class="report-title"> REPORT </p>
+            <img src="../static/images/logo.png" th:src="@{/images/logo.png}"/>
         </div>
       </div>	
-      	<div id="filtro-container">
-      		<button onclick="loadDoc()"> Filtro </button>
-      	</div>
 
-
-     <div class="table-container" >
+	<div class="header">
+	            <div class="docente"> 
+	                <p class="text-doc"> REPORTISTICA COMPLETA</p>
+	            </div>
+	           
+	            
+	        </div>
+	        <hr class="hr">
+      <div class="table-container" >
         <table>
           <tr>
             <th>Data</th>
@@ -82,15 +96,48 @@
             <td th:text="${feedback.data}"></td>
            	<td th:text="${feedback.modulo.modulo}"></td>
             <td th:text="${feedback.domanda.domanda}"></td> 
-            <td th:text="${feedback.voto}"></td>
+            <td>
+            	<span th:if="${feedback.voto == 1}">
+            		<span class="fa fa-star checked"></span>
+					<span class="fa fa-star"></span>
+					<span class="fa fa-star"></span>
+					<span class="fa fa-star"></span>
+					<span class="fa fa-star"></span>
+            	</span>
+            	<span th:if="${feedback.voto == 2}">
+            		<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+					<span class="fa fa-star"></span>
+					<span class="fa fa-star"></span>
+					<span class="fa fa-star"></span>
+            	</span>
+            	<span th:if="${feedback.voto == 3}">
+            		<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+					<span class="fa fa-star"></span>
+					<span class="fa fa-star"></span>
+            	</span>
+            	<span th:if="${feedback.voto == 4}">
+            		<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+					<span class="fa fa-star"></span>
+            	</span>
+            	<span th:if="${feedback.voto == 5}">
+            		<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+					<span class="fa fa-star checked"></span>
+            	</span>
+            	
+            </td>
        		
         </tr>
         </table>
-        
-        <div class="modulo">
-        	<a href="/admin/report"> Guarda il report per modulo </a>
         </div>
-      </div>
     </section>  
 
 <script type="text/javascript">
@@ -148,7 +195,7 @@
   top: 0;
   height: 100%;
   width: 78px;
-  background: #002F56;
+  background: #141029;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
@@ -246,29 +293,17 @@
   border: none;
   border-radius: 12px;
   transition: all 0.5s ease;
-  background: #1d1b31;
+  background: #183C5A;
 }
 .sidebar.open input{
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
 .sidebar.open .bx-search:hover{
-  background: #1d1b31;
+  background: #183C5A;
   color: #FFF;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -277,7 +312,7 @@
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #183C5A;
 }
 .sidebar li a:hover{
   background: #FFF;
@@ -298,7 +333,7 @@
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #183C5A;
 }
 .sidebar li i{
   height: 50px;
@@ -313,7 +348,7 @@
   left: 0;
   bottom: -8px;
   padding: 10px 14px;
-  background: #1d1b31;
+  background: #183C5A;
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -347,7 +382,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background: #1d1b31;
+  background: #183C5A;
   width: 100%;
   height: 60px;
   line-height: 60px;
@@ -374,10 +409,19 @@
 }
 .home-section .text{
   display: inline-block;
-  color: #11101d;
+  color: #183C5A;
   font-size: 25px;
   font-weight: 500;
   margin: 18px
+}
+
+
+.title-container img {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* Lista utenti CSS */
 .title-container {
@@ -386,6 +430,38 @@
    
     margin: auto;
     align-items: center;
+}
+
+
+.header {
+    width: 80%;
+    align-items: center;
+    margin: auto;
+    display: flex;
+    padding-top: 20px;
+}
+ 
+
+.docente {
+    width: 40%;
+    text-align: left;
+  display: flex;
+}
+
+.modulo {
+    text-align: center;
+    width: 40%;
+    text-align: left;
+}
+.text-doc{
+	font-size: 20px;
+	color: #141029;
+	font-weight: 500;
+}
+
+.hr {
+    width: 80%;
+    margin: auto;
 }
 .title {
     width: 100%;
@@ -406,12 +482,12 @@
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 0.5px solid #002F56;
+    background-color: #eaeafd;
 }
 .table-container table th {
     text-align: center;
     padding: 8px;
-    background-color: #002F56;
+    background-color: #183C5A;
     color: white;
     border: 0.5px solid #ffffff;
     border-bottom: none;
@@ -419,7 +495,11 @@
 .table-container table td {
     text-align: center;
     padding: 8px;
-    border: 0.5px solid #002F56;
+    border: 0.5px solid white;
+}
+
+.checked {
+  color: orange;
 }
 </style>
 </html>
