--- a/fullstack/src/main/resources/templates/risultati.html
+++ b/fullstack/src/main/resources/templates/risultati.html
@@ -9,74 +9,92 @@
 <title>Risultati</title>
 </head>
 <body>
-<!--  Navbar on the left -->
-<div class="sidebar">
-<div class="logo-details">
+	<!--  Navbar on the left -->
+	<div class="sidebar">
+	<div class="logo-details">
+	
+	<i></i>
+	<div class="logo_name"></div>
+	<i class='bx bx-menu' id="btn" ></i>
+	</div>
+	
+	
+	<ul class="nav-list">
+        <li>
+            <a href="/insegnante/profilo">
+            <i class='bx bxs-user-detail'></i>
+            <span class="links_name">Profilo</span>
+            </a>
+            <span class="tooltip">Profilo</span>
+        </li> 
 
-<i></i>
-<div class="logo_name"></div>
-<i class='bx bx-menu' id="btn" ></i>
-</div>
-
-
-<ul class="nav-list">
-<li>
-<a href="/insegnante/profilo">
-<i class='bx bxs-user-detail'></i>
-<span class="links_name">Profilo</span>
-</a>
-<span class="tooltip">Profilo</span>
-</li> 
-
-
-<li class="profile">
-<div class="profile-details">
-<!--<img src="profile.jpg" alt="profileImg">-->
-<div class="name_job">
-<div class="name"><p th:text= "${utente.nome}"></p></div> <!-- Nome Utente -->
-<div class="job"><p th:text="${utente.ruolo.ruolo}"></div> <!-- Ruolo -->
-</div>
-</div>
-<a href="/logout"><i class='bx bx-log-out' id="log_out" ></i></a> <!-- Mapping che mi fa il logout -->
-</li>
-</ul>
+        <li>
+            <a href="/insegnante/risultati">
+            <i class='bx bxs-report' ></i>
+            <span class="links_name">Reportistica</span>
+            </a>
+            <span class="tooltip">Reportistica</span>
+        </li> 
+	
+	
+	<li class="profile">
+	<div class="profile-details">
+	<div class="name_job">
+		<div class="name"><p th:text= "${utente.nome}"></p></div> <!-- Nome Utente -->
+		<div class="job"><p th:text="${utente.ruolo.ruolo}"></div> <!-- Ruolo -->
+	</div>
+	</div>
+	<a href="/logout"><i class='bx bx-log-out' id="log_out" ></i></a> <!-- Mapping che mi fa il logout -->
+	</li>
+	</ul>
 </div>
 
  
 
     <!-- Qua va messo tutto il contenuto --> 
-<section class="home-section">
+	<section class="home-section">
+        <div class="title-container">
+            <div class="title">
+                <img src="../static/images/logo.png" th:src="@{/images/logo.png}"/>
+            </div>
+          </div>
+        <div class="header">
+            <div class="docente"> 
+                <p class="text-doc"><b>DOCENTE: </b> </p><p>&nbsp;</p><p class="text-doc" th:text= "${utente.nome}"></p><p>&nbsp;</p><p class="text-doc" th:text= "${utente.cognome}">
+            </div>
+            <div class="modulo"> 
+                <p class="text-doc"><b>MODULO: </b></p><p>&nbsp;</p><p class="text-mod" th:text= "${materia}"></p>
+            </div>
+            
+        </div>
+        <hr class="hr">
 
-<div class="container"> 
-<h1 th:text=${materia}></h1>
-</div>
-
-<div class="table-container" >
-<table>
-<tr>
-<th>Domanda</th>
-<th>Totale dei Voti</th>
-<th>Media</th>
-
- 
-
-
-
-</tr>
-<tr th:each="s: ${stats}">
-<td th:text="${s.domanda}"></td>
-<td th:text="${s.totale}"></td>
-<td th:text="${s.media}"></td>
-
- 
-
-        </tr>
-</table>
-</div>
-
-
-
-</section>
+		<div class="table-container" >
+			<table>
+			<tr>
+			<th>Domanda</th>
+			<th>Totale dei Voti</th>
+			<th>Media</th>
+		
+		 
+		
+		
+		
+			</tr>
+			<tr th:each="s: ${stats}">
+			<td th:text="${s.domanda}"></td>
+			<td th:text="${s.totale}"></td>
+			<td th:text="${s.media}"></td>
+			
+		 
+		
+		        </tr>
+		</table>
+		</div>
+	
+	
+	
+	</section>
 <script type="text/javascript">
 
     var onloadCallback = function() {
@@ -98,7 +116,6 @@
 </body>
 <!-- CSS STYLE -->
 <style>
-/* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
@@ -106,50 +123,30 @@
   box-sizing: border-box;
   font-family: "Poppins" , sans-serif;
 }
-
- 
-
- 
-
 .sidebar{
   position: fixed;
   left: 0;
   top: 0;
   height: 100%;
   width: 78px;
-  background: #002F56;
+  background: #141029;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
 }
-
- 
-
 .sidebar.open{
   width: 250px;
 }
-
- 
-
-
 .sidebar .logo-details{
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-
- 
-
-
 .sidebar .logo-details .icon{
   opacity: 0;
   transition: all 0.5s ease;
 }
-
- 
-
-
 .sidebar .logo-details .logo_name{
   color: #fff;
   font-size: 20px;
@@ -157,18 +154,10 @@
   opacity: 0;
   transition: all 0.5s ease;
 }
-
- 
-
-
 .sidebar.open .logo-details .icon,
 .sidebar.open .logo-details .logo_name{
   opacity: 1;
 }
-
- 
-
-
 .sidebar .logo-details #btn{
   position: absolute;
   top: 50%;
@@ -181,10 +170,6 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
-
- 
-
-
 .sidebar.open .logo-details #btn{
   text-align: right;
 }
@@ -242,29 +227,17 @@
   border: none;
   border-radius: 12px;
   transition: all 0.5s ease;
-  background: #1d1b31;
+  background: #183C5A;
 }
 .sidebar.open input{
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
 .sidebar.open .bx-search:hover{
-  background: #1d1b31;
+  background: #183C5A;
   color: #FFF;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
+
 .sidebar li a{
   display: flex;
   height: 100%;
@@ -273,12 +246,8 @@
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #183C5A;
 }
-
- 
-
-
 .sidebar li a:hover{
   background: #FFF;
 }
@@ -295,14 +264,10 @@
   opacity: 1;
   pointer-events: auto;
 }
-
- 
-
-
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #183C5A;
 }
 .sidebar li i{
   height: 50px;
@@ -310,10 +275,6 @@
   font-size: 18px;
   border-radius: 12px;
 }
-
- 
-
-
 .sidebar li.profile{
   position: fixed;
   height: 60px;
@@ -321,7 +282,7 @@
   left: 0;
   bottom: -8px;
   padding: 10px 14px;
-  background: #1d1b31;
+  background: #183C5A;
   transition: all 0.5s ease;
   overflow: hidden;
 }
@@ -355,7 +316,7 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  background: #1d1b31;
+  background: #183C5A;
   width: 100%;
   height: 60px;
   line-height: 60px;
@@ -382,18 +343,22 @@
 }
 .home-section .text{
   display: inline-block;
-  color: #11101d;
+  color: #183C5A;
   font-size: 25px;
   font-weight: 500;
   margin: 18px
 }
 
- 
 
- 
+.title-container img {
+  width: 100px;
+  height: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
-/* Lista utenti CSS */
 .title-container {
     padding-top: 20px;
     width: 40%;
@@ -402,60 +367,59 @@
     align-items: center;
 }
 
- 
 
-.title {
-    width: 100%;
+.header {
+    width: 80%;
+    align-items: center;
     margin: auto;
-    justify-content: center;
+    display: flex;
+    padding-top: 20px;
+}
+ 
+.docente {
+    width: 30%;
+    text-align: left;
+	color:#183C5A;
+	display: flex;
+}
+
+.modulo {
     text-align: center;
-
- 
-
+    width: 30%;
+    text-align: left;
+    color:#183C5A;
+	display: flex;
 }
 
- 
-
-.title p {
-    font-size: 30px;
+.hr {
+    width: 80%;
+    margin: auto;
 }
-
- 
-
 
 .table-container {
     overflow-x: auto;
     width: 80%;
     margin: auto;
-    padding-top: 40px;
+    padding-top: 10px;
 }
-
- 
-
 .table-container table {
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 0.5px solid #002F56;
+    background-color: #eaeafd;
 }
-
- 
-
 .table-container table th {
     text-align: center;
     padding: 8px;
-    background-color: #002F56;
+    background-color: #183C5A;
     color: white;
     border: 0.5px solid #ffffff;
     border-bottom: none;
 }
-
- 
-
 .table-container table td {
     text-align: center;
     padding: 8px;
-    border: 0.5px solid #002F56;
+    border: 0.5px solid white;
 }
 
  
