--- a/fullstack/src/main/resources/templates/sondaggio.html
+++ b/fullstack/src/main/resources/templates/sondaggio.html
@@ -1,22 +1,86 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://thymeleaf.org">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title> Report </title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Boxicons CDN Link -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+    <body>
+   <!--  Navbar on the left -->
+    <div class="sidebar">
+        <div class="logo-details">
+        <i></i>
+            <div class="logo_name"></div>
+            <i class='bx bx-menu' id="btn" ></i>
+        </div>
+        
+        <ul class="nav-list">
+        
+         
+        <li>
+            <a href="/studente/menuFeedback"> 
+                <i class='bx bx-align-middle'></i>
+            <span class="links_name">Menu</span>
+            </a>
+            <span class="tooltip">Menu </span>
+        </li>
 
-    <title>Sondaggio</title>
-</head>
-<body>
+        <li>
+            <a href="/studente/profilo"> 
+                <i class='bx bxs-user' ></i>
+            <span class="links_name">Profilo</span>
+            </a>
+            <span class="tooltip">Profilo</span>
+        </li>
+            
 
 
-	  	
-	
+        <li class="profile">
+            <div class="profile-details">
+            <!--<img src="profile.jpg" alt="profileImg">-->
+            <div class="name_job">
+                <div class="name"><p th:text= "${utente.nome}"></p></div> <!-- Nome Utente -->
+                
+            </div>
+            </div>
+            <a href="/logout"><i class='bx bx-log-out' id="log_out" ></i></a> <!-- Mapping che mi fa il logout -->
+        </li>
+        </ul>
+    </div>
+
+
+    <!-- ------------------------->
+
+
+    <section class="home-section">
+        <div class="title-container">
+            <div class="image">
+                <img src="logo.png" th:src="@{/images/logo.png}" >
+                <p class="img-text"> Sondaggio ITS TECH </p>
+            </div>
+        </div>
+        <div class="header">
+            <div class="docente"> 
+               <p class="text-doc"><b>STUDENTE: </b><p>&nbsp;</p></p><p class="text-doc" th:text= "${utente.nome}"></p><p>&nbsp;</p><p class="text-doc" th:text= "${utente.cognome}">
+            </div>
+            <div class="modulo"> 
+                <p class="text-mod"> MODULO: </p><p class="text-doc" th:text="${modulo.modulo}"></p>
+            </div>
+            
+        </div>
+        <hr class="hr">
+
+
+
 	  	<form   th:action="@{/studente/sondaggio/{modulo}(modulo = ${modulo})}" th:object="${feedbacks}" method="post">
-			<div th:each="feedback, itemStat : *{feedbacklist}" class="input-box">		
-				<h2 th:text=*{feedbacklist[__${itemStat.index}__].domanda.domanda}></h2> 
+			<div th:each="feedback, itemStat : *{feedbacklist}" class="container-form">	
+                <div class="question">
+				    <p th:text=*{feedbacklist[__${itemStat.index}__].domanda.domanda}></p> 
+                </div>
 					<div class="input-box">		
-							<span class="details"> Risposta: </span>
 							<select class="form-control"  th:field="*{feedbacklist[__${itemStat.index}__].voto}" required>	                          
 		                           <option th:value="1.0" >non ricordo</option>
 		                           <option th:value="2.0" >non ricordo g</option>
@@ -25,12 +89,368 @@
 		                           <option th:value="5.0" >soddisfatto</option>        
 		                    </select>
 			        </div>
-		    </div>	    
-	    	<button type="submit" class="btn">Invia il sondaggio</button>
+		    </div>	
+            <div class="button"> 
+	    	    <button type="submit" class="btn">Invia il sondaggio</button>
+            </div>   
 	  	</form> 
-
+    </section>
 
 
       
 </body>
+<script>
+ let sidebar = document.querySelector(".sidebar");
+	    let closeBtn = document.querySelector("#btn");
+	    let searchBtn = document.querySelector(".bx-search");
+	
+	    closeBtn.addEventListener("click", ()=>{
+	        sidebar.classList.toggle("open");
+	        menuBtnChange();
+	    });
+</script>
+
+<style>
+/* Google Font Link */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins" , sans-serif;
+}
+.sidebar{
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 78px;
+  background: #141029;
+  padding: 6px 14px;
+  z-index: 99;
+  transition: all 0.5s ease;
+}
+.sidebar.open{
+  width: 250px;
+}
+.sidebar .logo-details{
+  height: 60px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.sidebar .logo-details .icon{
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+.sidebar .logo-details .logo_name{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+.sidebar.open .logo-details .icon,
+.sidebar.open .logo-details .logo_name{
+  opacity: 1;
+}
+.sidebar .logo-details #btn{
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  font-size: 22px;
+  transition: all 0.4s ease;
+  font-size: 23px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.sidebar.open .logo-details #btn{
+  text-align: right;
+}
+.sidebar i{
+  color: #fff;
+  height: 60px;
+  min-width: 50px;
+  font-size: 28px;
+  text-align: center;
+  line-height: 60px;
+}
+.sidebar .nav-list{
+  margin-top: 20px;
+  height: 100%;
+}
+.sidebar li{
+  position: relative;
+  margin: 8px 0;
+  list-style: none;
+}
+.sidebar li .tooltip{
+  position: absolute;
+  top: -20px;
+  left: calc(100% + 15px);
+  z-index: 3;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  padding: 6px 12px;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  opacity: 0;
+  white-space: nowrap;
+  pointer-events: none;
+  transition: 0s;
+}
+.sidebar li:hover .tooltip{
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0.4s ease;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.sidebar.open li .tooltip{
+  display: none;
+}
+.sidebar input{
+  font-size: 15px;
+  color: #FFF;
+  font-weight: 400;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  width: 50px;
+  border: none;
+  border-radius: 12px;
+  transition: all 0.5s ease;
+  background: #183C5A;
+}
+.sidebar.open input{
+  padding: 0 20px 0 50px;
+  width: 100%;
+}
+.sidebar.open .bx-search:hover{
+  background: #183C5A;
+  color: #FFF;
+}
+
+.sidebar li a{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  border-radius: 12px;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.4s ease;
+  background: #183C5A;
+}
+.sidebar li a:hover{
+  background: #FFF;
+}
+.sidebar li a .links_name{
+  color: #fff;
+  font-size: 15px;
+  font-weight: 400;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s;
+}
+.sidebar.open li a .links_name{
+  opacity: 1;
+  pointer-events: auto;
+}
+.sidebar li a:hover .links_name,
+.sidebar li a:hover i{
+  transition: all 0.5s ease;
+  color: #183C5A;
+}
+.sidebar li i{
+  height: 50px;
+  line-height: 50px;
+  font-size: 18px;
+  border-radius: 12px;
+}
+.sidebar li.profile{
+  position: fixed;
+  height: 60px;
+  width: 78px;
+  left: 0;
+  bottom: -8px;
+  padding: 10px 14px;
+  background: #183C5A;
+  transition: all 0.5s ease;
+  overflow: hidden;
+}
+.sidebar.open li.profile{
+  width: 250px;
+}
+.sidebar li .profile-details{
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.sidebar li img{
+  height: 45px;
+  width: 45px;
+  object-fit: cover;
+  border-radius: 6px;
+  margin-right: 10px;
+}
+.sidebar li.profile .name,
+.sidebar li.profile .job{
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+  white-space: nowrap;
+}
+.sidebar li.profile .job{
+  font-size: 12px;
+}
+.sidebar .profile #log_out{
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  background: #183C5A;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 0px;
+  transition: all 0.5s ease;
+}
+.sidebar.open .profile #log_out{
+  width: 50px;
+  background: none;
+}
+.home-section{
+  position: relative;
+  background: #ffffff;
+  min-height: 100vh;
+  top: 0;
+  left: 78px;
+  width: calc(100% - 78px);
+  transition: all 0.5s ease;
+  z-index: 2;
+}
+.sidebar.open ~ .home-section{
+  left: 250px;
+  width: calc(100% - 250px);
+}
+.home-section .text{
+  display: inline-block;
+  color: #183C5A;
+  font-size: 25px;
+  font-weight: 500;
+  margin: 18px
+}
+
+.title-container {
+    width: 60%;
+    margin: 20px auto;
+    align-items: center;
+    height: 200px;
+    background-color: #183C5A;
+    border-radius: 16px;
+}
+
+.title-container img {
+  width: 150px;
+  height: 150px;
+  margin-top: 20px;
+}
+
+
+.header {
+    width: 60%;
+    align-items: center;
+    margin: auto;
+    display: flex;
+    padding-top: 20px;
+}
+ 
+
+.docente {
+    width: 20%;
+    text-align: left;
+  display: flex;
+}
+
+.modulo {
+    text-align: center;
+    width: 20%;
+    text-align: left;
+}
+
+.hr {
+    width: 60%;
+    margin: auto;
+}
+
+.img-text {
+    text-align: center;
+    width: 60%;
+    color: white;
+    font-size: 35px;
+    padding-top: 70px;
+
+}
+
+.image {
+    display: flex;
+    justify-content: space-around;
+}
+
+.container-form {
+    background-color: #183C5A;
+    border-radius: 15px;
+    width: 60%;
+    margin: 20px auto;
+    height: 190px;
+
+}
+.question {
+
+    height: 80px;
+}
+
+.input-box {
+    height: 40px;
+    width: 30%;
+    margin-top: 20px;
+    margin: 30px auto auto 50px;
+}
+
+.form-control {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    border: none;
+}
+
+.button {
+    height: 45px;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 58%;
+}
+
+.btn {
+    height: 100%;
+    width: 30%;
+    outline: none;
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1;
+    border-radius: 7px;
+    background-color: #3DD6A3;
+    color: white;
+    cursor: pointer;
+    justify-content: center;
+ 
+}
+
+</style>
 </html>
