--- a/fullstack/src/main/resources/templates/modificaPassword.html
+++ b/fullstack/src/main/resources/templates/modificaPassword.html
@@ -65,25 +65,26 @@
 
 		 
 		        </div>        
-				  		<div class="button">
-		                   <button class="btn" type="submit" value="Modifica"> Modifica </button>
-		    			</div>
-				
-			  	<!--  Success message -->
+		        <br>
+		        <!--  Success message -->
 				
 				<div class="success" th:if="${param.success}">
-					<div class="alert-success"> Utente registrato con successo! </div>
+					<div class="alert-success"> Password modificata correttamente! </div>
               
-					<div class="alert-lgn"><a href="/">Tornare alla pagina login?</a></div>
+					<div class="alert-lista"><a th:href="@{/{role}/profilo(role = ${ruolo.ruolo})}"> Tornare al profilo? </a></div>
 				</div> 
 				
 				<!--  Error message -->
 				
 				<div class="error" th:if="${param.error}">
 					<div class="alert-error"> Conferma la password correttamente! </div>
-              
-					<div class="alert-lista"><a href="/admin/listaUtenti">Vedere la lista utenti? </a></div>
+       
 				</div> 
+				  		<div class="button">
+		                   <button class="btn" type="submit" value="Modifica"> Modifica </button>
+		    			</div>
+				
+			  	
 								
 			</form>
 	      
