--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -116,19 +116,19 @@
 				
 			  	<!--  Success message -->
 				
-				<!-- <div class="success" th:if="${param.success}">
+				<div class="success" th:if="${param.success}">
 					<div class="alert-success"> Utente registrato con successo! </div>
               
 					<div class="alert-lgn"><a href="/">Tornare alla pagina login?</a></div>
-				</div> -->
+				</div>
 				
 				<!--  Error message -->
 				
-				<!-- <div class="error" th:if="${param.error}">
+				<div class="error" th:if="${param.error}">
 					<div class="alert-error"> Utente già registrato! </div>
               
 					<div class="alert-lista"><a href="/admin/listaUtenti">Vedere la lista utenti? </a></div>
-				</div> -->
+				</div>
 								
 			</form>
 	      
